Add surefire configuration for endorsed