@@ -34,4 +34,22 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.7.1</version>
+                    <configuration>
+                        <systemPropertyVariables>
+                            <maven.repo>${settings.localRepository}</maven.repo>
+                            <glassfish.install.dir>${glassfish.install.dir}</glassfish.install.dir>
+                            <glassfish.version>${glassfish.version}</glassfish.version>
+                        </systemPropertyVariables>
+                        <argLine>-server -Djava.endorsed.dirs=${glassfish.install.dir}/glassfish3/glassfish/modules/endorsed:${glassfish.install.dir}/glassfish3/glassfish/lib/endorsed</argLine>
+                    </configuration>
+                </plugin>
+        </plugins>
+    </build>
 </project>
